# cpp_project

./: .gitignore  CMakeLists.txt  DEMO.md  FINAL_SUMMARY.txt  README.md  RECRUITER_CHECKLIST.md  STREAMLIT_GUIDE.md  STREAMLIT_README.md  cpp_trading_wrapper.py  requirements.txt  run_demo.sh  streamlit_dashboard.py  streamlit_demo.py
examples/: demo_realtime.cpp
include/engine/: router.hpp  signal_rules.hpp
include/md/: feed_sim.hpp  spsc_queue.hpp  tick.hpp
include/stats/: rolling_covar.hpp  rolling_stats.hpp
include/util/: latency.hpp
src/engine/: router.cpp  signal_rules.cpp
src/md/: feed_sim.cpp
src/stats/: rolling_covar.cpp  rolling_stats.cpp
src/util/: latency.cpp
tests/: test_queue.cpp  test_stats.cpp
